--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^3.10.0
+  cloud_firestore: ^5.6.1
 
 dev_dependencies:
   flutter_test:
