--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.10.0
   cloud_firestore: ^5.6.1
+  firebase_auth: ^5.4.0
 
 dev_dependencies:
   flutter_test:
